Display per-child timer lists on dashboard card

--- a/dashboard/templates/dashboard/child.html
+++ b/dashboard/templates/dashboard/child.html
@@ -13,7 +13,7 @@
     <div id="dashboard-child" class="card-columns">
         {% card_feeding_last object %}
         {% card_feeding_last_method object %}
-        {% card_timer_list %}
+        {% card_timer_list object %}
         {% card_statistics object %}
         {% card_sleep_last object %}
         {% card_sleep_day object %}
