--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="row row-cols-2">
+    <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-12">
             {% card_timer_list %}
         </div>
