--- a/core/templates/core/temperature_list.html
+++ b/core/templates/core/temperature_list.html
@@ -8,7 +8,14 @@
 {% endblock %}
 
 {% block content %}
-    <h1>{% trans "Temperature" %}</h1>
+    <h1>
+        {% trans "Temperature" %}
+        {% if perms.core.add_temperature %}
+            <a href="{% url 'core:temperature-add' %}" class="btn btn-sm btn-success">
+                <i class="icon icon-temperature" aria-hidden="true"></i> {% trans "Add Temperature Reading" %}
+            </a>
+        {% endif %}
+    </h1>
     {% include 'babybuddy/filter.html' %}
     <div class="table-responsive">
         <table class="table table-striped table-hover">
@@ -53,11 +60,4 @@
         </table>
     </div>
     {% include 'babybuddy/paginator.html' %}
-
-    {% if perms.core.add_temperature %}
-        <a href="{% url 'core:temperature-add' %}" class="btn btn-sm btn-success">
-            <i class="icon icon-temperature" aria-hidden="true"></i> {% trans "Add a Temperature Reading" %}
-        </a>
-    {% endif %}
-
 {% endblock %}
