--- a/core/templates/core/child_list.html
+++ b/core/templates/core/child_list.html
@@ -8,7 +8,14 @@
 {% endblock %}
 
 {% block content %}
-    <h1>{% trans "Children" %}</h1>
+    <h1>
+        {% trans "Children" %}
+        {% if perms.core.add_child %}
+            <a href="{% url 'core:child-add' %}" class="btn btn-sm btn-success">
+                <i class="icon icon-child" aria-hidden="true"></i> {% trans "Add Child" %}
+            </a>
+        {% endif %}
+    </h1>
     {% include 'babybuddy/filter.html' %}
     <div class="table-responsive">
         <table class="table table-striped table-hover child-list">
@@ -64,11 +71,4 @@
         </table>
     </div>
     {% include 'babybuddy/paginator.html' %}
-
-    {% if perms.core.add_child %}
-        <a href="{% url 'core:child-add' %}" class="btn btn-sm btn-success">
-            <i class="icon icon-child" aria-hidden="true"></i> {% trans "Add a Child" %}
-        </a>
-    {% endif %}
-
 {% endblock %}
