--- a/core/templates/core/feeding_list.html
+++ b/core/templates/core/feeding_list.html
@@ -8,7 +8,14 @@
 {% endblock %}
 
 {% block content %}
-    <h1>{% trans "Feedings" %}</h1>
+    <h1>
+        {% trans "Feedings" %}
+        {% if perms.core.add_feeding %}
+            <a href="{% url 'core:feeding-add' %}" class="btn btn-sm btn-success">
+                <i class="icon icon-feeding" aria-hidden="true"></i> {% trans "Add Feeding" %}
+            </a>
+        {% endif %}
+    </h1>
     {% include 'babybuddy/filter.html' %}
     <div class="table-responsive">
         <table class="table table-striped table-hover">
@@ -64,11 +71,4 @@
         </table>
     </div>
     {% include 'babybuddy/paginator.html' %}
-
-    {% if perms.core.add_feeding %}
-        <a href="{% url 'core:feeding-add' %}" class="btn btn-sm btn-success">
-            <i class="icon icon-feeding" aria-hidden="true"></i> {% trans "Add a Feeding" %}
-        </a>
-    {% endif %}
-
 {% endblock %}
