--- a/core/templates/core/tummytime_list.html
+++ b/core/templates/core/tummytime_list.html
@@ -8,7 +8,13 @@
 {% endblock %}
 
 {% block content %}
-    <h1>{% trans "Tummy Time" %}</h1>
+    <h1>
+        {% trans "Tummy Time" %}
+        {% if perms.core.add_tummytime %}
+            <a href="{% url 'core:tummytime-add' %}" class="btn btn-sm btn-success">
+                <i class="icon icon-tummytime" aria-hidden="true"></i> {% trans "Add Tummy Time" %}</a>
+        {% endif %}
+    </h1>
     {% include 'babybuddy/filter.html' %}
     <div class="table-responsive">
         <table class="table table-striped table-hover">
@@ -57,10 +63,4 @@
         </table>
     </div>
     {% include 'babybuddy/paginator.html' %}
-
-    {% if perms.core.add_tummytime %}
-        <a href="{% url 'core:tummytime-add' %}" class="btn btn-sm btn-success">
-            <i class="icon icon-tummytime" aria-hidden="true"></i> {% trans "Add a Tummy Time Entry" %}</a>
-    {% endif %}
-
 {% endblock %}
