Update references to old repo address

--- a/babybuddy/templates/babybuddy/nav-dropdown.html
+++ b/babybuddy/templates/babybuddy/nav-dropdown.html
@@ -250,7 +250,7 @@
                                    target="_blank">{% trans "Backend Admin" %}</a>
                             {% endif %}
                             <h6 class="dropdown-header">{% trans "Support" %}</h6>
-                            <a href="https://github.com/cdubz/babybuddy"
+                            <a href="https://github.com/babybuddy/babybuddy"
                                class="dropdown-item"
                                target="_blank">
                                 <i class="icon icon-source" aria-hidden="true"></i> {% trans "Source Code" %}</a>
