Implement example notes handling in Diaper Change list

--- a/babybuddy/static_src/scss/global.scss
+++ b/babybuddy/static_src/scss/global.scss
@@ -69,3 +69,26 @@
         color: theme-color('light') !important;
     }
 }
+
+// Basic table of model instances.
+.table-instances {
+    tr {
+        td, th {
+            vertical-align: middle;
+        }
+
+        &.odd {
+            background: $table-accent-bg;
+        }
+        &.even {
+            background: none;
+        }
+        &.row-details {
+            td {
+                color: $gray-500;
+                padding-top: 0;
+                border-top: 0;
+            }
+        }
+    }
+}
