--- a/core/templates/core/diaperchange_list.html
+++ b/core/templates/core/diaperchange_list.html
@@ -18,7 +18,7 @@
     </h1>
     {% include 'babybuddy/filter.html' %}
     <div class="table-responsive">
-        <table class="table table-striped table-hover">
+        <table class="table table-instances">
             <thead class="thead-inverse">
                 <tr>
                     <th>{% trans "Child" %}</th>
@@ -32,7 +32,8 @@
             </thead>
             <tbody>
                 {% for change in object_list %}
-                    <tr>
+                    {% cycle "odd" "even" as row_class silent %}
+                    <tr class="{{ row_class }}">
                         <th scope="row"><a href="{% url 'core:child' change.child.slug %}">{{ change.child }}</a></th>
                         <td class="text-center">{{ change.wet|bool_icon }}</td>
                         <td class="text-center">{{ change.solid|bool_icon }}</td>
@@ -57,6 +58,11 @@
                             </div>
                         </td>
                     </tr>
+                    {% if change.notes %}
+                        <tr class="{{ row_class }} row-details">
+                            <td colspan="7"><i class="icon icon-note mr-2" aria-hidden="true"></i>{{ change.notes }}</td>
+                        </tr>
+                    {% endif %}
                 {% empty %}
                     <tr>
                         <th colspan="6">{% trans "No diaper changes found." %}</th>
