Standardize card language for "no data"

--- a/dashboard/templates/cards/diaperchange_last.html
+++ b/dashboard/templates/cards/diaperchange_last.html
@@ -9,7 +9,7 @@
             {{ time }} ago
         {% endblocktrans %}
     {% else %}
-        {% trans "Never" %}
+        {% trans "None" %}
     {% endif %}
 {% endblock %}
 
