--- a/dashboard/templates/cards/diaperchange_types.html
+++ b/dashboard/templates/cards/diaperchange_types.html
@@ -4,7 +4,11 @@
 {% block header %}{% trans "Diaper Changes" %}{% endblock %}
 
 {% block title %}
-    {% trans "Past Week" %}
+    {% if total == 0 %}
+        {% trans "None" %}
+    {% else %}
+        {% trans "Past Week" %}
+    {% endif %}
 {% endblock %}
 
 {% block content %}
