--- a/dashboard/templates/cards/sleep_naps_day.html
+++ b/dashboard/templates/cards/sleep_naps_day.html
@@ -9,9 +9,7 @@
             {{ count }} nap{{ plural }}
         {% endblocktrans %}
     {% else %}
-        <i class="icon icon-sad" aria-hidden="true"></i>
-        {% trans "None yet today" %}
-        <i class="icon icon-sad" aria-hidden="true"></i>
+        {% trans "None" %}
     {% endif %}
 {% endblock %}
 
