--- a/dashboard/templates/cards/sleep_day.html
+++ b/dashboard/templates/cards/sleep_day.html
@@ -7,9 +7,7 @@
     {% if total %}
         {{ total|duration_string }}
     {% else %}
-        <i class="icon icon-sad" aria-hidden="true"></i>
-        {% trans "None yet today" %}
-        <i class="icon icon-sad" aria-hidden="true"></i>
+        {% trans "None" %}
     {% endif %}
 {% endblock %}
 
