--- a/dashboard/templates/cards/feeding_last_method.html
+++ b/dashboard/templates/cards/feeding_last_method.html
@@ -9,7 +9,7 @@
             <div class="carousel-inner">
             {% for feeding in feedings %}
                 <div class="carousel-item{% if forloop.counter == feedings|length %} active{% endif %}">
-                    <div class="display-4 text-center">{{ feeding.get_method_display }}</div>
+                    <div class="last-feeding-method text-center">{{ feeding.get_method_display }}</div>
                     <div class="text-center small text-muted">
                         {% if forloop.last %}
                             {% trans "most recent" %}
