--- a/core/templates/core/feeding_list.html
+++ b/core/templates/core/feeding_list.html
@@ -18,7 +18,7 @@
     </h1>
     {% include 'babybuddy/filter.html' %}
     <div class="table-responsive">
-        <table class="table table-striped table-hover">
+        <table class="table table-instances">
             <thead class="thead-inverse">
                 <tr>
                     <th>{% trans "Child" %}</th>
@@ -33,7 +33,8 @@
             </thead>
             <tbody>
                 {% for feeding in object_list %}
-                    <tr>
+                    {% cycle "odd" "even" as row_class silent %}
+                    <tr class="{{ row_class }}">
                         <th scope="row"><a href="{% url 'core:child' feeding.child.slug %}">{{ feeding.child }}</a></th>
                         <td>{{ feeding.get_method_display }}</td>
                         <td>{{ feeding.get_type_display }}</td>
@@ -62,6 +63,11 @@
                             </div>
                         </td>
                     </tr>
+                    {% if feeding.notes %}
+                        <tr class="{{ row_class }} row-details">
+                            <td colspan="7"><i class="icon icon-note mr-2" aria-hidden="true"></i>{{ feeding.notes }}</td>
+                        </tr>
+                    {% endif %}
                 {% empty %}
                     <tr>
                         <th colspan="7">{% trans "No feedings found." %}</th>
