--- a/babybuddy/templates/admin/base_site.html
+++ b/babybuddy/templates/admin/base_site.html
@@ -1,9 +1,10 @@
 {% extends "admin/base.html" %}
+{% load i18n %}
 
-{% block title %}{{ title }} | Baby Buddy Admin{% endblock %}
+{% block title %}{{ title }} | {% trans "Database Admin"%}{% endblock %}
 
 {% block branding %}
-<h1 id="site-name"><a href="{% url 'admin:index' %}">Baby Buddy Admin</a></h1>
+<h1 id="site-name"><a href="{% url 'admin:index' %}">{% trans "Database Admin"%}</a></h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
