--- a/core/templates/core/timer_list.html
+++ b/core/templates/core/timer_list.html
@@ -45,7 +45,7 @@
                     <td>{{ timer.duration|duration_string }}</td>
                     <td>{{ timer.end }}</td>
                     <td>{{ timer.active|bool_icon }}</td>
-                    <td>{{ timer.user }}</td>
+                    <td>{{ timer.user_username }}</td>
                 </tr>
             {% empty %}
                 <tr>
