--- a/dashboard/templates/cards/timer_list.html
+++ b/dashboard/templates/cards/timer_list.html
@@ -13,12 +13,12 @@
 
 {% block listgroup %}
     <ul class="list-group list-group-flush">
-    {% for instance in instances %}
-        <a href="{% url 'core:timer-detail' instance.id %}"
+    {% for timer in instances %}
+        <a href="{% url 'core:timer-detail' timer.id %}"
            class="list-group-item list-group-item-action">
-            <strong>{{ instance.title_with_child }}</strong>
+            <strong>{{ timer.title_with_child }}</strong>
             <p class="text-muted small m-0">
-                {% blocktrans trimmed with start=instance.start|time user=instance.user %}
+                {% blocktrans trimmed with start=timer.start|time user=timer.user_username %}
                     Started by {{ user }} at {{ start }}
                 {% endblocktrans %}
             </p>
