--- a/core/templates/core/feeding_form.html
+++ b/core/templates/core/feeding_form.html
@@ -1,5 +1,5 @@
 {% extends 'babybuddy/page.html' %}
-{% load i18n %}
+{% load datetimepicker i18n %}
 
 {% block title %}
     {% if request.resolver_match.url_name == 'feeding-update' %}
@@ -32,12 +32,15 @@
 {% block javascript %}
     <script type="text/javascript">
         BabyBuddy.DatetimePicker.init($('#datetimepicker_start'), {
-            defaultDate: false
+            defaultDate: false,
+            format: '{% datetimepicker_format %}'
         });
-        BabyBuddy.DatetimePicker.init($('#datetimepicker_end'));
+        BabyBuddy.DatetimePicker.init($('#datetimepicker_end'), {
+            format: '{% datetimepicker_format %}'
+        });
         $('#id_type').change(function() {
             var feed_type=$('#id_type').val();
-            if (feed_type=='formula'||feed_type=='fortified breast milk') {
+            if (feed_type === 'formula' || feed_type === 'fortified breast milk') {
                 $('#id_method').val('bottle');
             }
         });
