--- a/core/templates/core/sleep_form.html
+++ b/core/templates/core/sleep_form.html
@@ -1,5 +1,5 @@
 {% extends 'babybuddy/page.html' %}
-{% load i18n %}
+{% load datetimepicker i18n %}
 
 {% block title %}
     {% if request.resolver_match.url_name == 'sleep-update' %}
@@ -32,8 +32,11 @@
 {% block javascript %}
     <script type="text/javascript">
         BabyBuddy.DatetimePicker.init($('#datetimepicker_start'), {
-            defaultDate: false
+            defaultDate: false,
+            format: '{% datetimepicker_format %}'
         });
-        BabyBuddy.DatetimePicker.init($('#datetimepicker_end'));
+        BabyBuddy.DatetimePicker.init($('#datetimepicker_end'), {
+            format: '{% datetimepicker_format %}'
+        });
     </script>
 {% endblock %}
