--- a/core/templates/core/temperature_form.html
+++ b/core/templates/core/temperature_form.html
@@ -1,5 +1,5 @@
 {% extends 'babybuddy/page.html' %}
-{% load i18n %}
+{% load datetimepicker i18n %}
 
 {% block title %}
     {% if object %}
@@ -31,6 +31,8 @@
 
 {% block javascript %}
     <script type="text/javascript">
-        BabyBuddy.DatetimePicker.init($('#datetimepicker_time'));
+        BabyBuddy.DatetimePicker.init($('#datetimepicker_time'), {
+            format: '{% datetimepicker_format %}'
+        });
     </script>
 {% endblock %}
