--- a/core/templates/core/timer_form.html
+++ b/core/templates/core/timer_form.html
@@ -1,5 +1,5 @@
 {% extends 'babybuddy/page.html' %}
-{% load duration i18n %}
+{% load datetimepicker duration i18n %}
 
 {% block title %}{% trans "Timer" %}{% endblock %}
 
@@ -27,7 +27,7 @@
 {% block javascript %}
     <script type="text/javascript">
         BabyBuddy.DatetimePicker.init($('#datetimepicker_start'), {
-            format: 'L LTS'
+            format: '{% datetimepicker_format 'L LTS' %}'
         });
     </script>
 {% endblock %}
