--- a/core/templates/core/tummytime_form.html
+++ b/core/templates/core/tummytime_form.html
@@ -1,5 +1,5 @@
 {% extends 'babybuddy/page.html' %}
-{% load i18n %}
+{% load datetimepicker i18n %}
 
 {% block title %}
     {% if request.resolver_match.url_name == 'tummytime-update' %}
@@ -33,10 +33,10 @@
     <script type="text/javascript">
         BabyBuddy.DatetimePicker.init($('#datetimepicker_start'), {
             defaultDate: false,
-            format: 'L LTS'
+            format: '{% datetimepicker_format 'L LTS' %}'
         });
         BabyBuddy.DatetimePicker.init($('#datetimepicker_end'), {
-            format: 'L LTS'
+            format: '{% datetimepicker_format 'L LTS' %}'
         });
     </script>
 {% endblock %}
