Use day precision for child age (#167)

--- a/core/templates/core/child_detail.html
+++ b/core/templates/core/child_detail.html
@@ -1,5 +1,5 @@
 {% extends 'babybuddy/page.html' %}
-{% load i18n static thumbnail %}
+{% load i18n static thumbnail duration %}
 
 {% block title %}{{ object }}{% endblock %}
 
@@ -21,7 +21,7 @@
                 <div class="child-name display-4">{{ object }}</div>
                 <p class="lead">
                     {% trans "Born" %} <span class="text-secondary">{{ object.birth_date }}</span><br/>
-                    {% trans "Age" %} <span class="text-secondary">{{ object.birth_date|timesince }}</span>
+                    {% trans "Age" %} <span class="text-secondary">{{ object.birth_date|child_age_string }}</span>
                 </p>
                 {% include 'dashboard/child_button_group.html' %}
             </div>
