Boolean field labels are no longer clickable so they can't be accidentally toggle the field value

--- a/babybuddy/static_src/scss/global.scss
+++ b/babybuddy/static_src/scss/global.scss
@@ -30,6 +30,10 @@
     }
 }
 
+.boolean-label {
+    pointer-events: none;
+}
+
 // Set default text color for datetime picker.
 .bootstrap-datetimepicker-widget {
     color: $gray-400;
