--- a/dashboard/templates/cards/base.html
+++ b/dashboard/templates/cards/base.html
@@ -1,13 +1,13 @@
-{% if not empty and user.settings.dashboard_hide_empty %}
-<div class="card card-dashboard card-{{ type }}">
-    <div class="card-header">
-        <i class="icon icon-{{ type }} pull-left" aria-hidden="true"></i>
-        {% block header %}{% endblock %}
+{% if not empty or not user_wants_hide %}
+    <div class="card card-dashboard card-{{ type }}">
+        <div class="card-header">
+            <i class="icon icon-{{ type }} pull-left" aria-hidden="true"></i>
+            {% block header %}{% endblock %}
+        </div>
+        <div class="card-body">
+            <span class="card-title"><strong>{% block title %}{% endblock %}</strong></span>
+            <div class="card-text"> {% block content %}{% endblock %} </div>
+        </div>
+        {% block listgroup %}{% endblock %}
     </div>
-    <div class="card-body">
-        <span class="card-title"><strong>{% block title %}{% endblock %}</strong></span>
-        <div class="card-text">{% block content %}{% endblock %}</div>
-    </div>
-    {% block listgroup %}{% endblock %}
-</div>
 {% endif %}
