--- a/dashboard/templates/cards/base.html
+++ b/dashboard/templates/cards/base.html
@@ -1,4 +1,4 @@
-{% if not empty or not user_wants_hide %}
+{% if not empty or not hide_empty %}
     <div class="card card-dashboard card-{{ type }}">
         <div class="card-header">
             <i class="icon icon-{{ type }} pull-left" aria-hidden="true"></i>
