--- a/babybuddy/templates/babybuddy/user_settings_form.html
+++ b/babybuddy/templates/babybuddy/user_settings_form.html
@@ -70,7 +70,7 @@
                     {% endwith %}
                 </div>
                 <div class="form-group row">
-                    {% with form_settings.dashboard_hide_age field %}
+                    {% with form_settings.dashboard_hide_age as field %}
                         {% include 'babybuddy/form_field.html' %}
                     {% endwith %}
                 </div>
