--- a/babybuddy/templates/babybuddy/user_settings_form.html
+++ b/babybuddy/templates/babybuddy/user_settings_form.html
@@ -69,6 +69,11 @@
                         {% include 'babybuddy/form_field.html' %}
                     {% endwith %}
                 </div>
+                <div class="form-group row">
+                    {% with form_settings.dashboard_hide_age as field %}
+                        {% include 'babybuddy/form_field.html' %}
+                    {% endwith %}
+                </div>
             </fieldset>
             <fieldset>
                 <legend>{% trans "API" %}</legend>
