--- a/dashboard/templates/cards/tummytime_last.html
+++ b/dashboard/templates/cards/tummytime_last.html
@@ -5,8 +5,9 @@
 
 {% block title %}
     {% if tummytime %}
-        {% blocktrans trimmed with time=tummytime.time|timesince %}
-            {{ time }} ago
+        {% blocktrans trimmed with since=tummytime.time|timesince time=tummytime.time|time %}
+            <div>{{ since }} ago</div>
+            <small>{{ time }}</small>
         {% endblocktrans %}
     {% else %}
         {% trans "Never" %}
