--- a/core/templates/core/child_detail.html
+++ b/core/templates/core/child_detail.html
@@ -52,7 +52,10 @@
                         </div>
                         <div class="card text-right">
                             <div class="card-body">
-                                {{ object.event }}
+                                {{ object.event }}<br />
+                                {% if object.details %}
+                                <small>{{ object.details }}</small>
+                                {% endif %}
                             </div>
                             <div class="card-footer text-muted">
                                 {% blocktrans trimmed with since=object.time|timesince time=object.time|time %}
